[gd_scene load_steps=6 format=3 uid="uid://ck4vm0eqf23ix"]

[ext_resource type="Script" path="res://NinjaNpc.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://tqprdqp60578" path="res://HealthBar.tscn" id="14"]
[ext_resource type="Texture2D" uid="uid://t40jkopnlts1" path="res://Sprites/ninja.png" id="17"]

[sub_resource type="CapsuleShape2D" id="5"]
radius = 7.0

[sub_resource type="OccluderPolygon2D" id="4"]
polygon = PackedVector2Array(-10, -7, -13, -9, -16, -7, -14, 0, -15, 4, -11, 12, -2, 21, 6, 16, 1, 3, -6, -5, -8, -6)

[node name="Npc" type="CharacterBody2D"]
collision_layer = 7
collision_mask = 7
input_pickable = true
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.999999, 7)
rotation = -0.523599
shape = SubResource("5")

[node name="Timer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("14")]
offset_left = -20.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = -15.0
scale = Vector2(0.2, 0.2)

[node name="EnemyNavAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
path_max_distance = 10.0

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 6)
rotation = -0.570723
texture = ExtResource("17")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(4, 1)
occluder = SubResource("4")

[connection signal="input_event" from="." to="." method="_on_Enemy_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
